[project]
name = "phub"
version = "4.8.5"
description = "An API for Pornhub"
authors = [
  {name = 'Egsagon', email = "egsagon.git@gmail.com"},
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
license = {file = "LICENSE"}
readme = {file = "pypi.md", content-type = "text/markdown"}
keywords = ["pornhub", "phub", "porn", "api", "web scrapper", "api wrapper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = ["httpx[brotli,socks]", "eaf_base_api", "h2"]
requires-python = ">=3.9"


[project.scripts]
phub = "phub.__main__:main"

[project.urls]
Documentation = "https://phub.readthedocs.io"
Documentation_Updated = "https://github.com/EchterAlsFake/API_Docs/blob/master/Porn_APIs/PHUB.md"
Repository = "https://github.com/EchterAlsFake/PHUB"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
