[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "phub"
version = "5.0"
description = "An API for Pornhub"
authors = [
  {name = 'Egsagon', email = "egsagon.git@gmail.com"},
  {name = "EchterAlsFake", email = "EchterAlsFake@proton.me"}
]
requires-python = ">=3.10"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["pornhub", "phub", "porn", "api", "web scrapper", "api wrapper"]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "eaf_base_api",
  "m3u8",
  "demjson3",
  "bs4"

  ]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml"] # H2 for HTTP 2.0 support, LXML for faster parsing speed, though optional :)


[project.urls]
Documentation = "https://github.com/EchterAlsFake/API_Docs/blob/master/Porn_APIs/PHUB.md"
Repository = "https://github.com/EchterAlsFake/PHUB"

[tool.uv.build-backend]
module-name = "phub"
module-root = ""