[metadata]
name = phub
version = 3.1.1
description = An API for PornHub
author = Egsagon
author_email = egsagon12@gmail.com
url = https://github.com/Egsagon/PHUB/
license = GPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
platforms = unix, linux, win32, cygwin
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.11
    Intended Audience :: Education

[options]
packages =
    phub
install_requires = 
    requests>=2
    tqdm>=4
    click>=8
python_requires = >=3.11
package_dir=
    =src
